GNOME Bugzilla – Bug 695353
control mode is broken
Last modified: 2013-03-15 12:34:42 UTC
Blocker as it makes using speech very hard. Bisect traces breakage to https://git.gnome.org/browse/dasher/commit/?id=51647cd642a9ce5a2bfb545b96a8e3eafd404ef9 The control.xml is successfully parsed. iExpect != pNode->GetChildren().size() fires at https://git.gnome.org/browse/dasher/tree/Src/DasherCore/DasherModel.cpp?id=51647cd642a9ce5a2bfb545b96a8e3eafd404ef9#n443
Should be fixed by https://git.gnome.org/browse/dasher/commit/?id=abfb9798cbd023286235390fa4a0fe2e399d6dbe Thanks to Norbert Schmidt for the report and Alan Lawrence for the fix.