Fix control mode

Thanks to Norbert Schmidt for the report
https://bugzilla.gnome.org/show_bug.cgi?id=695353